# AGENTIC_PRODUCT_DEVELOPMENT

./: README.md  requirements.txt
website_automation/: README.md  pyproject.toml  streamlit_app.py
website_automation/db/: chroma.sqlite3
website_automation/src/website_automation/: crew.py  main.py
website_automation/src/website_automation/config/: agents.yaml  tasks.yaml
website_automation/src/website_automation/knowledge/: brd.docx
