[project]
name = "website_automation"
version = "0.1.0"
description = "website_automation using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0"
]

[project.scripts]
website_automation = "website_automation.main:run"
run_crew = "website_automation.main:run"
train = "website_automation.main:train"
replay = "website_automation.main:replay"
test = "website_automation.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
